🚀 18888 접속불가 및 대기열 에러발생 소스 (대용량 로그 제외)