@@ -27,24 +27,13 @@ public class HsioService {
     private final Ha00Mapper ha00Mapper;
     private final ObjectMapper objectMapper;
 
-    /**
-     * Map의 모든 Key를 소문자로 변환 (DB 리턴값 처리용 표준)
-     */
-    private Map<String, Object> lower(Map<String, Object> map) {
-        if (map == null) return new HashMap<>();
-        Map<String, Object> newMap = new LinkedHashMap<>();
-        for (Map.Entry<String, Object> entry : map.entrySet()) {
-            newMap.put(entry.getKey().toLowerCase(), entry.getValue());
-        }
-        return newMap;
-    }
 
     @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
     public Map<String, Object> saveRequest(Hsio010uRequest request, String userId) throws Exception {
         Hsio010u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_010U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String reqym = nvl(mstRow.get("reqym"));
         String reqno = nvl(mstRow.get("reqno"));
 
@@ -64,7 +53,7 @@ public class HsioService {
         Hsio050u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_050U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String balym = nvl(mstRow.get("balym"));
         String balno = nvl(mstRow.get("balno"));
 
@@ -84,7 +73,7 @@ public class HsioService {
         Hsio052u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_052U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String balym = nvl(mstRow.get("balym"));
         String balno = nvl(mstRow.get("balno"));
 
@@ -104,7 +93,7 @@ public class HsioService {
         Hsio190u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_190U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -123,9 +112,18 @@ public class HsioService {
     @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
     public Map<String, Object> saveOtherOut(Hsio250uRequest request, String userId) throws Exception {
         Hsio250u mst = request.getMst();
+        if (mst == null) throw new Exception("Master data is null.");
+
+        // 🚀 [보정] 마스터 데이터 정규화 (null 방지)
+        mst.setAddress(nvl(mst.getAddress()));
+        mst.setCfmyn(nvl(mst.getCfmyn(), "Y"));
+        mst.setGubun(nvl(mst.getGubun(), "1"));
+        mst.setTotsum(nvl(mst.getTotsum(), "0"));
+        mst.setUpdemp(userId);
+
         List<Map<String, Object>> res = hsioMapper.HSIO_250U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -135,6 +133,16 @@ public class HsioService {
                 dtl.setCmpycd(mst.getCmpycd());
                 dtl.setIogbn(mst.getIogbn());
                 dtl.setUpdemp(userId);
+
+                // 🚀 [보정] 상세 데이터 정규화
+                dtl.setIorowno(nvl(dtl.getIorowno()));
+                dtl.setIoymd(nvl(dtl.getIoymd()));
+                dtl.setItemcd(nvl(dtl.getItemcd()));
+                dtl.setUnit(nvl(dtl.getUnit()));
+                dtl.setPkunit(nvl(dtl.getPkunit()));
+                dtl.setIovat(dtl.getIovat() == null ? java.math.BigDecimal.ZERO : dtl.getIovat());
+                dtl.setCfmyn(nvl(dtl.getCfmyn(), "Y"));
+
                 hsioMapper.HSIO_251U_STR(dtl);
             }
         }
@@ -146,7 +154,7 @@ public class HsioService {
         Hsio300u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_300U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String imym = nvl(mstRow.get("imym"));
         String imno = nvl(mstRow.get("imno"));
 
@@ -175,7 +183,7 @@ public class HsioService {
         String autoSlipYn = "N";
         List<Map<String, Object>> p1Res = ha00Mapper.HA00_010S_STR(Map.of("cmpycd", cmpycd, "gubun", "P1"));
         if (p1Res != null && !p1Res.isEmpty()) {
-            autoSlipYn = nvl(lower(p1Res.getFirst()).get("slipyn"), "N");
+            autoSlipYn = nvl(convertMapToLowerCase(p1Res.getFirst()).get("slipyn"), "N");
         }
 
         String acctymd = "Y".equals(autoSlipYn) ? slipymd : "";
@@ -200,7 +208,7 @@ public class HsioService {
                 Map<String, Object> mstMap = objectMapper.convertValue(slipMst, new TypeReference<>() {});
                 List<Map<String, Object>> mstRes = haslMapper.HASL_010U_STR(mstMap);
                 if (mstRes == null || mstRes.isEmpty()) throw new Exception("전표 마스터 생성 실패");
-                currentSlipNo = nvl(lower(mstRes.getFirst()).get("slipno"));
+                currentSlipNo = nvl(convertMapToLowerCase(mstRes.getFirst()).get("slipno"));
             }
 
             item.setActkind("U0");
@@ -215,7 +223,7 @@ public class HsioService {
 
             List<Map<String, Object>> itemRes = hsioMapper.HSIO_320U_STR(item);
             if (itemRes != null && !itemRes.isEmpty()) {
-                Map<String, Object> row = lower(itemRes.getFirst());
+                Map<String, Object> row = convertMapToLowerCase(itemRes.getFirst());
                 if ("Y".equals(nvl(row.get("erryn")))) {
                     throw new Exception(nvl(row.get("msg"), "입금 처리 중 오류"));
                 }
@@ -246,22 +254,98 @@ public class HsioService {
     @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
     public Map<String, Object> saveSettlement(Hsio510uRequest request, String userId) throws Exception {
         Hsio510u mst = request.getMst();
+        List<Hsio510u> dtlList = request.getDtl();
+        if (mst == null) throw new Exception("Request master data is null.");
+
+        // 1. [A0] 마스터 저장 및 채번
+        mst.setActkind("A0");
+        mst.setIogbn("200");
+        mst.setUpdemp(userId);
+        
         List<Map<String, Object>> res = hsioMapper.HSIO_510U_STR(mst);
-        if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        if (res == null || res.isEmpty()) throw new Exception("마스터 저장 실패 (응답 없음)");
+
+        Map<String, Object> mstRow = convertMapToLowerCase(res.get(0));
         String jsanym = nvl(mstRow.get("jsanym"));
         String jsanno = nvl(mstRow.get("jsanno"));
 
-        if (request.getDtl() != null) {
-            for (Hsio511u dtl : request.getDtl()) {
+        if ("000000".equals(jsanym)) throw new Exception(nvl(jsanno, "마스터 저장 업무 오류"));
+        if (jsanym.isEmpty() || jsanno.isEmpty()) throw new Exception("정산 채번 실패");
+
+        // 2. [U0] 상세 내역 루프 저장
+        if (dtlList != null) {
+            log.info("📝 [매출정산] 상세 저장 시작 - 총 {}건", dtlList.size());
+            for (int i = 0; i < dtlList.size(); i++) {
+                Hsio510u dtl = dtlList.get(i);
                 dtl.setActkind("U0");
-                dtl.setJsanym(jsanym); dtl.setJsanno(jsanno);
                 dtl.setCmpycd(mst.getCmpycd());
+                dtl.setIogbn("200");
+                dtl.setJsanym(jsanym); 
+                dtl.setJsanno(jsanno);
                 dtl.setUpdemp(userId);
-                hsioMapper.HSIO_511U_STR(dtl);
+                
+                // 🚀 [해결] 마스터 데이터 완벽 상속 (상세 저장 시 누락 방지)
+                dtl.setCustcd(mst.getCustcd());
+                dtl.setDeptcd(mst.getDeptcd());
+                dtl.setTaxunit(mst.getTaxunit());
+                dtl.setVattype(mst.getVattype());
+                dtl.setJsanymd(nvl(mst.getJsanymd()).replace("-", ""));
+                dtl.setFromdt(nvl(mst.getFromdt()).replace("-", ""));
+                dtl.setTodt(nvl(mst.getTodt()).replace("-", ""));
+                
+                // 원본 출고 정보 보존 및 데이터 정규화
+                dtl.setIoym(nvl(dtl.getIoym()));
+                dtl.setIono(nvl(dtl.getIono()));
+                dtl.setIorowno(nvl(dtl.getIorowno()));
+                dtl.setJsanqty(nvl(dtl.getJsanqty(), "0"));
+                dtl.setJsanamt(nvl(dtl.getJsanamt(), "0"));
+                dtl.setJsanvat(nvl(dtl.getJsanvat(), "0"));
+
+                log.info("   ▶ [{}/{}] 상세 파라미터: {}", (i + 1), dtlList.size(), dtl);
+
+                List<Map<String, Object>> dtlRes = hsioMapper.HSIO_510U_STR(dtl);
+                if (dtlRes != null && !dtlRes.isEmpty()) {
+                    Map<String, Object> dtlRow = convertMapToLowerCase(dtlRes.get(0));
+                    // 🚀 [해결] 일관된 jsanym 키 기반 무결성 체크
+                    String dtlStatus = nvl(dtlRow.get("jsanym"));
+                    String dtlMsg = nvl(dtlRow.get("jsanno"));
+
+                    if ("000000".equals(dtlStatus)) {
+                        throw new Exception(dtlMsg.isEmpty() ? "상세 저장 업무 오류" : dtlMsg);
+                    }
+                }
             }
         }
+
+        // 3. [V0] 최종 세금계산서 생성 확정
+        mst.setActkind("V0");
+        mst.setJsanym(jsanym);
+        mst.setJsanno(jsanno);
+        List<Map<String, Object>> vRes = hsioMapper.HSIO_510U_STR(mst);
+        if (vRes != null && !vRes.isEmpty()) {
+            Map<String, Object> vRow = convertMapToLowerCase(vRes.get(0));
+            // 🚀 [해결] 최종 단계도 jsanym 키로 무결성 체크
+            String vStatus = nvl(vRow.get("jsanym"));
+            String vMsg = nvl(vRow.get("jsanno"));
+
+            if ("000000".equals(vStatus)) {
+                throw new Exception(vMsg.isEmpty() ? "최종 확정 업무 오류" : vMsg);
+            }
+        }
+
         return mstRow;
+    }
+
+    /**
+     * Map의 모든 Key를 소문자로 변환 (HSOD100U 표준)
+     */
+    private Map<String, Object> convertMapToLowerCase(Map<String, Object> map) {
+        if (map == null) return new HashMap<>();
+        Map<String, Object> newMap = new LinkedHashMap<>();
+        for (Map.Entry<String, Object> entry : map.entrySet()) {
+            newMap.put(entry.getKey().toLowerCase(), entry.getValue());
+        }
+        return newMap;
     }
 
     @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
@@ -269,7 +353,7 @@ public class HsioService {
         Hsio500u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_500U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -290,16 +374,31 @@ public class HsioService {
         Hsio580u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_580U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
+        String ino = nvl(mstRow.get("ino"));
 
         if (request.getDtl() != null) {
             for (Hsio581u dtl : request.getDtl()) {
-                dtl.setIoym(ioym); dtl.setIono(iono);
+                dtl.setIoym(ioym);
+                dtl.setIono(iono);
+                dtl.setIno(ino);
                 dtl.setCmpycd(mst.getCmpycd());
                 dtl.setIogbn(mst.getIogbn());
                 dtl.setUpdemp(userId);
+
+                // 🚀 데이터 정규화 (MyBatis Reflection 오류 방지 및 SP 안정성 확보)
+                dtl.setOdeptcd(nvl(dtl.getOdeptcd()));
+                dtl.setOwhcd(nvl(dtl.getOwhcd()));
+                dtl.setIoymd(nvl(dtl.getIoymd()));
+                dtl.setIdeptcd(nvl(dtl.getIdeptcd()));
+                dtl.setIwhcd(nvl(dtl.getIwhcd()));
+                dtl.setItemcd(nvl(dtl.getItemcd()));
+                dtl.setUnit(nvl(dtl.getUnit()));
+                dtl.setOrdym(nvl(dtl.getOrdym()));
+                dtl.setOrdno(nvl(dtl.getOrdno()));
+
                 hsioMapper.HSIO_581U_STR(dtl);
             }
         }
@@ -311,7 +410,7 @@ public class HsioService {
         Hsio720u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_720U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -320,6 +419,17 @@ public class HsioService {
                 dtl.setIoym(ioym); dtl.setIno(iono);
                 dtl.setCmpycd(mst.getCmpycd());
                 dtl.setUpdemp(userId);
+
+                // 🚀 데이터 정규화
+                dtl.setIogbn(nvl(dtl.getIogbn()));
+                dtl.setIorowno(nvl(dtl.getIorowno()));
+                dtl.setOno(nvl(dtl.getOno()));
+                dtl.setDeptcd(nvl(dtl.getDeptcd()));
+                dtl.setWhcd(nvl(dtl.getWhcd()));
+                dtl.setIoymd(nvl(dtl.getIoymd()));
+                dtl.setItemcd(nvl(dtl.getItemcd()));
+                dtl.setUnit(nvl(dtl.getUnit()));
+
                 hsioMapper.HSIO_721U_STR(dtl);
             }
         }
@@ -331,7 +441,7 @@ public class HsioService {
         Hsio730u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_730U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -340,6 +450,17 @@ public class HsioService {
                 dtl.setIoym(ioym); dtl.setIno(iono);
                 dtl.setCmpycd(mst.getCmpycd());
                 dtl.setUpdemp(userId);
+
+                // 🚀 데이터 정규화
+                dtl.setIogbn(nvl(dtl.getIogbn()));
+                dtl.setIorowno(nvl(dtl.getIorowno()));
+                dtl.setOno(nvl(dtl.getOno()));
+                dtl.setDeptcd(nvl(dtl.getDeptcd()));
+                dtl.setWhcd(nvl(dtl.getWhcd()));
+                dtl.setIoymd(nvl(dtl.getIoymd()));
+                dtl.setItemcd(nvl(dtl.getItemcd()));
+                dtl.setUnit(nvl(dtl.getUnit()));
+
                 hsioMapper.HSIO_731U_STR(dtl);
             }
         }
@@ -351,7 +472,7 @@ public class HsioService {
         Hsio570u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_570U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -384,7 +505,7 @@ public class HsioService {
         Hsio490u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_490U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -403,8 +524,87 @@ public class HsioService {
     @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
     public Map<String, Object> saveHSIO600U(Map<String, Object> params) {
         List<Map<String, Object>> res = hsioMapper.HSIO_600U_STR(params);
-        if (res != null && !res.isEmpty()) return lower(res.getFirst());
+        if (res != null && !res.isEmpty()) return convertMapToLowerCase(res.getFirst());
         return Map.of("res", "OK");
+    }
+
+    @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
+    public Map<String, Object> saveOutbound550(Hsio550uSaveRequest request, String userId) throws Exception {
+        Hsio550u mst = request.getMst();
+        List<Hsio551u> dtlList = request.getDtl();
+        
+        if (mst == null) throw new Exception("Master data is null.");
+        
+        mst.setActkind("A0");
+        mst.setUpdemp(userId);
+        mst.setIogbn("200");
+        
+        String ioymd = nvl(mst.getIoymd()).replace("-", "");
+        if (ioymd.length() > 8) ioymd = ioymd.substring(0, 8);
+        mst.setIoymd(ioymd);
+        
+        mst.setFromdt(nvl(mst.getFromdt()).replace("-", ""));
+        mst.setTodt(nvl(mst.getTodt()).replace("-", ""));
+        
+        List<Map<String, Object>> resM = hsioMapper.HSIO_550U_STR(mst);
+        if (resM == null || resM.isEmpty()) throw new Exception("출고 마스터 저장 실패 (응답 없음)");
+        
+        Map<String, Object> mstRow = convertMapToLowerCase(resM.get(0));
+        String ioym = nvl(mstRow.get("ioym"));
+        String iono = nvl(mstRow.get("iono"));
+
+        if ("000000".equals(ioym)) {
+            throw new Exception(nvl(iono, "출고 마스터 업무 오류"));
+        }
+        
+        if (ioym.isEmpty() || iono.isEmpty()) {
+            throw new Exception("출고 번호 채번 실패");
+        }
+
+        // 2. Detail Save
+        if (dtlList != null) {
+            log.info("📝 [주문출고] 상세 저장 시작 - 총 {}건", dtlList.size());
+            for (int i = 0; i < dtlList.size(); i++) {
+                Hsio551u dtl = dtlList.get(i);
+                dtl.setActkind("A0");
+                dtl.setCmpycd(mst.getCmpycd());
+                dtl.setIoym(ioym);
+                dtl.setIono(iono);
+                dtl.setIoymd(mst.getIoymd());
+                dtl.setIogbn("200");
+                dtl.setUpdemp(userId);
+                
+                // 🚀 [해결] 마스터 데이터 완벽 상속 (custcd, whcd, iotype)
+                dtl.setCustcd(mst.getCustcd());
+                dtl.setWhcd(mst.getWhcd());
+                dtl.setIotype(nvl(mst.getIotype(), "100"));
+                
+                // 데이터 정규화
+                dtl.setIoqty(nvl(dtl.getIoqty(), "0"));
+                dtl.setIoamt(nvl(dtl.getIoamt(), "0"));
+                dtl.setIovat(nvl(dtl.getIovat(), "0"));
+                
+                String balym = nvl(dtl.getBalym()).replace("-", "");
+                if (balym.length() > 6) balym = balym.substring(0, 6);
+                dtl.setBalym(balym);
+
+                log.info("   ▶ [{}/{}] 상세 파라미터: {}", (i + 1), dtlList.size(), dtl);
+                
+                List<Map<String, Object>> resD = hsioMapper.HSIO_551U_STR(dtl);
+                if (resD != null && !resD.isEmpty()) {
+                    Map<String, Object> dtlRow = convertMapToLowerCase(resD.get(0));
+                    // 🚀 [해결] 상세 저장 시에도 ioym 키로 000000 에러 체크
+                    String dtlStatus = nvl(dtlRow.get("ioym"));
+                    String dtlMsg = nvl(dtlRow.get("iono"));
+
+                    if ("000000".equals(dtlStatus)) {
+                        throw new Exception(dtlMsg.isEmpty() ? "상세 저장 업무 오류" : dtlMsg);
+                    }
+                }
+            }
+        }
+        
+        return mstRow;
     }
 
     @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
@@ -417,7 +617,7 @@ public class HsioService {
         if (details == null || details.isEmpty()) throw new Exception("전송할 전표 상세 내역이 없습니다.");
 
         for (Map<String, Object> row : details) {
-            Map<String, Object> lowerRow = lower(row);
+            Map<String, Object> lowerRow = convertMapToLowerCase(row);
             log.info("🚀 [THEJONE 전송 대기] SLIP: {}-{}, ACCT: {}, DEAL: {}", 
                 slipymd, slipno, lowerRow.get("acctcd"), lowerRow.get("custcd"));
         }
@@ -442,12 +642,26 @@ public class HsioService {
         mParams.put("actkind", "A0"); mParams.put("updemp", userId);
         List<Map<String, Object>> resM = hsioMapper.HSIO_060U_STR(mParams);
         if (resM == null || resM.isEmpty()) throw new Exception("입고 마스터 생성 실패");
-        Map<String, Object> rowM = lower(resM.getFirst());
+        Map<String, Object> rowM = convertMapToLowerCase(resM.getFirst());
         String ioym = nvl(rowM.get("ioym"));
         String iono = nvl(rowM.get("iono"));
 
         for (Map<String, Object> item : items) {
             Map<String, Object> dParams = new HashMap<>(item);
+
+            // 🚀 발주금액/수량 비례 입고금액/부가세 계산
+            double balqty = Double.parseDouble(nvl(item.get("balqty"), "0"));
+            double balamt = Double.parseDouble(nvl(item.get("balamt"), "0"));
+            double balvat = Double.parseDouble(nvl(item.get("balvat"), "0"));
+            double ioqty = Double.parseDouble(nvl(item.get("ioqty"), "0"));
+
+            if (balqty > 0) {
+                long ioamt = Math.round((balamt / balqty) * ioqty);
+                long iovat = Math.round((balvat / balqty) * ioqty);
+                dParams.put("ioamt", ioamt);
+                dParams.put("iovat", iovat);
+            }
+
             dParams.put("actkind", "A0");
             dParams.put("cmpycd", cmpycd);
             dParams.put("iogbn", iogbn);
@@ -471,7 +685,7 @@ public class HsioService {
 
         String autoSlip = "N";
         List<Map<String, Object>> resSet = hsipMapper.HSIP_112U_STR(Map.of("cmpycd", cmpycd, "gbn", "P1")); 
-        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(lower(resSet.getFirst()).get("slipyn"), "N");
+        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(convertMapToLowerCase(resSet.getFirst()).get("slipyn"), "N");
         String acctymd = "Y".equals(autoSlip) ? slipymd : "";
 
         Map<String, Object> mParams = createParamMap();
@@ -488,7 +702,7 @@ public class HsioService {
 
         List<Map<String, Object>> resMst = haslMapper.HASL_010U_STR(mParams);
         if (resMst == null || resMst.isEmpty()) throw new Exception("전표 마스터 생성 실패");
-        String slipno = nvl(lower(resMst.getFirst()).get("slipno"));
+        String slipno = nvl(convertMapToLowerCase(resMst.getFirst()).get("slipno"));
 
         for (Map<String, Object> item : items) {
             Map<String, Object> dParams = new HashMap<>();
@@ -512,7 +726,7 @@ public class HsioService {
 
             List<Map<String, Object>> resD = hsioMapper.HSIO_130U_STR(dParams);
             if (resD != null && !resD.isEmpty()) {
-                Map<String, Object> rowD = lower(resD.getFirst());
+                Map<String, Object> rowD = convertMapToLowerCase(resD.getFirst());
                 if ("Y".equals(nvl(rowD.get("erryn")))) {
                     throw new Exception(nvl(rowD.get("msg"), "정산 연동 실패"));
                 }
@@ -544,60 +758,73 @@ public class HsioService {
         List<Map<String, Object>> items = request.getItems();
         if (items == null || items.isEmpty()) throw new Exception("발행할 데이터가 없습니다.");
 
-        String slipymd = nvl(mst.get("pubymd")).replace("-", "");
         String cmpycd = nvl(mst.get("cmpycd"));
-        String deptcd = nvl(mst.get("deptcd"));
-        String ioymdfr = nvl(mst.get("fromdt")).replace("-", "");
-        String ioymdto = nvl(mst.get("todt")).replace("-", "");
+        String slipymd = nvl(mst.get("pubymd")).replace("-", "");
+        String hdeptcd = nvl(mst.get("deptcd")); // 발행부서
+        String fromdt = nvl(mst.get("fromdt")).replace("-", "");
+        String todt = nvl(mst.get("todt")).replace("-", "");
+        String business = nvl(mst.get("business"), String.format("%s 외부매입 정산 전표", nvl(mst.get("usernm"))));
 
+        // 🚀 [A0] 전표 마스터 생성 (XML 22개 파라미터 풀 매핑)
+        Map<String, Object> aParams = new HashMap<>();
+        aParams.put("actkind", "A0");
+        aParams.put("cmpycd", cmpycd);
+        aParams.put("iogbn", "100");
+        aParams.put("fromdt", fromdt);
+        aParams.put("todt", todt);
+        aParams.put("deptcd", hdeptcd);
+        aParams.put("jsanym", "");
+        aParams.put("jsanno", "");
+        aParams.put("jsanymd", "");
+        aParams.put("spyamt", "0");
+        aParams.put("vatamt", "0");
+        aParams.put("custcd", "");
+        aParams.put("taxunit", "");
+        aParams.put("vattype", "");
+        aParams.put("slipymd", slipymd);
+        aParams.put("slipno", "");
+        aParams.put("cardyn", nvl(mst.get("cardyn"), "N"));
+        aParams.put("cardno", nvl(mst.get("cardno")));
+        aParams.put("slipkind", "030");
+        aParams.put("hdeptcd", hdeptcd);
+        aParams.put("business", business);
+        aParams.put("updemp", userId);
+        
+        List<Map<String, Object>> resA = hsioMapper.HSIO_131U_STR(aParams);
+        if (resA == null || resA.isEmpty()) throw new Exception("전표번호 채번 실패");
+        Map<String, Object> rowA = convertMapToLowerCase(resA.getFirst());
+        String slipno = nvl(rowA.get("slipno"));
+
+        // 🚀 [U0] 루프 상세 매핑 (XML 22개 파라미터 풀 매핑)
         for (Map<String, Object> item : items) {
-            String costcd = nvl(item.get("costcd"));
-            String itemFileno = nvl(item.get("fileno"));
-            String docno = nvl(item.get("docno"));
-            String crowno = nvl(item.get("crowno"));
-            String slipKind = "200".equals(costcd) ? "031" : "030";
-            String itemDeptcd = nvl(item.get("deptcd"), deptcd);
+            Map<String, Object> uParams = new HashMap<>();
+            uParams.put("actkind", "U0");
+            uParams.put("cmpycd", cmpycd);
+            uParams.put("iogbn", "100");
+            uParams.put("fromdt", fromdt);
+            uParams.put("todt", todt);
+            uParams.put("deptcd", nvl(item.get("deptcd")));
+            uParams.put("jsanym", nvl(item.get("jsanym")));
+            uParams.put("jsanno", nvl(item.get("jsanno")));
+            uParams.put("jsanymd", nvl(item.get("jsanymd")));
+            uParams.put("spyamt", nvl(item.get("spyamt")));
+            uParams.put("vatamt", nvl(item.get("vatamt")));
+            uParams.put("custcd", nvl(item.get("custcd")));
+            uParams.put("taxunit", nvl(item.get("taxunit")));
+            uParams.put("vattype", nvl(item.get("vattype")));
+            uParams.put("slipymd", slipymd);
+            uParams.put("slipno", slipno);
+            uParams.put("cardyn", nvl(mst.get("cardyn"), "N"));
+            uParams.put("cardno", nvl(mst.get("cardno")));
+            uParams.put("slipkind", "030");
+            uParams.put("hdeptcd", hdeptcd);
+            uParams.put("business", business);
+            uParams.put("updemp", userId);
 
-            Map<String, Object> baseParams = new HashMap<>();
-            baseParams.put("cmpycd", cmpycd);
-            baseParams.put("iogbn", "100");
-            baseParams.put("costcd", costcd);
-            baseParams.put("fromdt", ioymdfr);
-            baseParams.put("todt", ioymdto);
-            baseParams.put("deptcd", itemDeptcd);
-            baseParams.put("fileno", itemFileno);
-            baseParams.put("docno", docno);
-            baseParams.put("crowno", crowno);
-            baseParams.put("jsanymd", nvl(item.get("jsanymd")).replace("-", ""));
-            baseParams.put("spyamt", nvl(item.get("spyamt"), "0").replace(",", ""));
-            baseParams.put("vatamt", nvl(item.get("vatamt"), "0").replace(",", ""));
-            baseParams.put("custcd", nvl(item.get("custcd")));
-            baseParams.put("taxunit", nvl(item.get("taxunit"), "100"));
-            baseParams.put("vattype", nvl(item.get("vattype"), "010"));
-            baseParams.put("slipymd", slipymd);
-            baseParams.put("slipno", "");
-            baseParams.put("slipkind", slipKind);
-            baseParams.put("hdeptcd", itemDeptcd);
-            baseParams.put("business", itemFileno + "-" + nvl(item.get("bigo")));
-            baseParams.put("updemp", userId);
-
-            baseParams.put("actkind", "A0");
-            List<Map<String, Object>> resA = hsioMapper.HSIO_131U_STR(baseParams);
-            if (resA == null || resA.isEmpty()) throw new Exception("전표번호 채번 실패");
-            Map<String, Object> rowA = lower(resA.getFirst());
-            String slipno = nvl(rowA.get("slipno"));
-
-            baseParams.put("actkind", "U0");
-            baseParams.put("slipno", slipno);
-            List<Map<String, Object>> resU = hsioMapper.HSIO_131U_STR(baseParams);
-            if (resU != null && !resU.isEmpty()) {
-                Map<String, Object> rowU = lower(resU.getFirst());
-                if ("00000000".equals(nvl(rowU.get("status")))) {
-                    throw new Exception("정산 저장 실패: " + nvl(rowU.get("msg"), "업무 오류"));
-                }
-            }
+            hsioMapper.HSIO_131U_STR(uParams);
         }
-        return Map.of("res", "OK");
+
+        return Map.of("slipno", slipno, "res", "OK");
     }
 
     @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
@@ -639,7 +866,7 @@ public class HsioService {
 
             List<Map<String, Object>> res = hsioMapper.HSIO_140U_STR(hsioParams);
             if (res != null && !res.isEmpty()) {
-                Map<String, Object> row = lower(res.getFirst());
+                Map<String, Object> row = convertMapToLowerCase(res.getFirst());
                 if ("Y".equals(nvl(row.get("erryn")))) {
                     throw new Exception("전표[" + slipno + "] 취소 실패: " + nvl(row.get("msg")));
                 }
@@ -660,7 +887,7 @@ public class HsioService {
 
         String autoSlip = "N";
         List<Map<String, Object>> resSet = hsipMapper.HSIP_112U_STR(Map.of("cmpycd", cmpycd, "gbn", "P1"));
-        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(lower(resSet.getFirst()).get("slipyn"), "N");
+        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(convertMapToLowerCase(resSet.getFirst()).get("slipyn"), "N");
         String acctymd = "Y".equals(autoSlip) ? slipymd : "";
 
         Map<String, Object> mParams = createParamMap();
@@ -677,7 +904,7 @@ public class HsioService {
 
         List<Map<String, Object>> resMst = haslMapper.HASL_010U_STR(mParams);
         if (resMst == null || resMst.isEmpty()) throw new Exception("전표 마스터 생성 실패");
-        Map<String, Object> rowM = lower(resMst.getFirst());
+        Map<String, Object> rowM = convertMapToLowerCase(resMst.getFirst());
         String slipno = nvl(rowM.get("slipno"));
 
         for (Map<String, Object> item : items) {
@@ -702,7 +929,7 @@ public class HsioService {
 
             List<Map<String, Object>> resD = hsioMapper.HSIO_530U_STR(dParams);
             if (resD != null && !resD.isEmpty()) {
-                Map<String, Object> rowD = lower(resD.getFirst());
+                Map<String, Object> rowD = convertMapToLowerCase(resD.getFirst());
                 if ("Y".equals(nvl(rowD.get("erryn")))) {
                     throw new Exception(nvl(rowD.get("msg"), "정산 연동 실패"));
                 }
@@ -768,7 +995,7 @@ public class HsioService {
 
             List<Map<String, Object>> res = hsioMapper.HSIO_540U_STR(hsioParams);
             if (res != null && !res.isEmpty()) {
-                Map<String, Object> row = lower(res.getFirst());
+                Map<String, Object> row = convertMapToLowerCase(res.getFirst());
                 if ("Y".equals(nvl(row.get("erryn")))) {
                     throw new Exception("전표[" + slipno + "] 취소 실패: " + nvl(row.get("msg")));
                 }
@@ -805,7 +1032,7 @@ public class HsioService {
 
         List<Map<String, Object>> resM = hsioMapper.HSIO_531U_STR(mParams);
         if (resM == null || resM.isEmpty()) throw new Exception("전표 마스터 발행 실패 (번호 채번 오류)");
-        Map<String, Object> rowM = lower(resM.getFirst());
+        Map<String, Object> rowM = convertMapToLowerCase(resM.getFirst());
         String slipno = nvl(rowM.get("slipno"));
 
         for (Map<String, Object> item : items) {
@@ -833,7 +1060,7 @@ public class HsioService {
 
             List<Map<String, Object>> resD = hsioMapper.HSIO_531U_STR(dParams);
             if (resD != null && !resD.isEmpty()) {
-                Map<String, Object> rowD = lower(resD.getFirst());
+                Map<String, Object> rowD = convertMapToLowerCase(resD.getFirst());
                 if ("Y".equals(nvl(rowD.get("erryn")))) {
                     throw new Exception(nvl(rowD.get("msg"), "전표 상세 연동 실패"));
                 }
@@ -882,7 +1109,7 @@ public class HsioService {
 
             List<Map<String, Object>> res = hsioMapper.HSIO_541U_STR(hsioParams);
             if (res != null && !res.isEmpty()) {
-                Map<String, Object> row = lower(res.getFirst());
+                Map<String, Object> row = convertMapToLowerCase(res.getFirst());
                 if ("Y".equals(nvl(row.get("erryn")))) {
                     throw new Exception("전표[" + slipno + "] 취소 실패: " + nvl(row.get("msg")));
                 }
@@ -904,7 +1131,7 @@ public class HsioService {
 
         String autoSlip = "N";
         List<Map<String, Object>> resSet = ha00Mapper.HA00_010S_STR(Map.of("cmpycd", cmpycd, "gubun", "P1"));
-        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(lower(resSet.getFirst()).get("slipyn"), "N");
+        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(convertMapToLowerCase(resSet.getFirst()).get("slipyn"), "N");
         String acctymd = "Y".equals(autoSlip) ? slipymd : "";
 
         for (Map<String, Object> item : items) {
@@ -934,14 +1161,14 @@ public class HsioService {
             params.put("slipno", "");
             List<Map<String, Object>> resA = hsioMapper.HSIO_325U_STR(params);
             if (resA == null || resA.isEmpty()) throw new Exception("전표 번호 채번 실패");
-            Map<String, Object> rowA = lower(resA.getFirst());
+            Map<String, Object> rowA = convertMapToLowerCase(resA.getFirst());
             String slipno = nvl(rowA.get("slipno"));
 
             params.put("actkind", "U");
             params.put("slipno", slipno);
             List<Map<String, Object>> resU = hsioMapper.HSIO_325U_STR(params);
             if (resU != null && !resU.isEmpty()) {
-                Map<String, Object> rowU = lower(resU.getFirst());
+                Map<String, Object> rowU = convertMapToLowerCase(resU.getFirst());
                 if ("Y".equals(nvl(rowU.get("erryn")))) {
                     throw new Exception("정산 저장 실패: " + nvl(rowU.get("msg"), "업무 오류"));
                 }
@@ -971,7 +1198,7 @@ public class HsioService {
         String cmpycd = request.getCmpycd();
         String autoSlip = "N";
         List<Map<String, Object>> resSet = ha00Mapper.HA00_010S_STR(Map.of("cmpycd", cmpycd, "gubun", "P1"));
-        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(lower(resSet.getFirst()).get("slipyn"), "N");
+        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(convertMapToLowerCase(resSet.getFirst()).get("slipyn"), "N");
 
         for (Map<String, Object> item : request.getItems()) {
             String slipymd = nvl(item.get("slipymd")).replace("-", "");
@@ -1005,7 +1232,7 @@ public class HsioService {
 
             List<Map<String, Object>> res = hsioMapper.HSIO_325U_STR(hsioParams);
             if (res != null && !res.isEmpty()) {
-                Map<String, Object> row = lower(res.getFirst());
+                Map<String, Object> row = convertMapToLowerCase(res.getFirst());
                 if ("Y".equals(nvl(row.get("erryn")))) {
                     throw new Exception("전표[" + slipno + "] 취소 실패: " + nvl(row.get("msg")));
                 }
